Add page js and menu page js #5

--- a/projet_jeux/pages/page1.html
+++ b/projet_jeux/pages/page1.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
           <a class="nav-link" href="../pages/page3.html">Page 3</a>
         </li>    
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
+        </li>    
       </ul>
     </div>  
   </nav>
