Add 3rd statement and testjs link page to menu #5

--- a/projet_jeux/index.html
+++ b/projet_jeux/index.html
@@ -32,7 +32,10 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="pages/page3.html">Page 3</a>
-      </li>  
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="pages/pageJS.html">Page Test js</a>
+      </li>   
     </ul>
   </div>  
 </nav>
@@ -82,5 +85,7 @@
   <p>Footer</p>
 </div>
 
+
+<script src="index.js"></script> 
 </body>
 </html>
