--- a/projet_jeux/pages/page3.html
+++ b/projet_jeux/pages/page3.html
@@ -32,7 +32,10 @@
           </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Page 3</a>
-        </li>    
+        </li>  
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
+        </li>     
       </ul>
     </div>  
   </nav>
