--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/style1.css">
+  <link rel="stylesheet" type="text/css" href="../css/stylejs.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -13,7 +13,7 @@
 
 <body>
   <div class="jumbotron text-center" style="margin-bottom:0">
-    <h1>Site en javascript Page 3</h1>
+    <h1>Site en javascript Test JS</h1>
     <p>Resize this responsive page to see the effect!</p> 
   </div>
   
@@ -25,13 +25,13 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="../pages/page2.html">Accueil</a>
+            <a class="nav-link" href="../index.html">Accueil</a>
           </li> 
       </ul>
     </div>  
   </nav>
 
-  <div class="container" style="margin-top:30px">
+  <div class="container Bulb">
         <h2>1st js Bulb on-off</h2>
         
         <button onclick="document.getElementById('myImage').src='../images/pic_bulbon.gif'">Turn on the light</button>
@@ -42,23 +42,28 @@
   </div> 
 
 
-  <div class="container" style="margin-top:50px">  
+  <div class="container Display">  
          <h2>2nd js display</h2>
-         
+
         <p id="demo">JavaScript can change the style of an HTML element.</p>
 
         <button type="button" onclick="document.getElementById('demo').style.display='none'">Click Me!</button>
 
         <button type="button" onclick="document.getElementById('demo').style.display='block'">Click Me!</button>
-
   </div>
 
+  <div class="container Display">
+    <h2>3rd JavaScript Statements</h2>
 
+        <p id="demotest"></p>
+  </div>
 
-  <div class="jumbotron text-center" style="margin-bottom:0">
+  <div class="jumbotron text-center" style="margin-top: 50px; margin-bottom:0">
     <p>Footer</p>
   </div>
 
-</body>
 
+  <script src="../js/index.js"></script>
+
+</body>
 </html>
