Add 4th js variable #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -31,7 +31,7 @@
     </div>  
   </nav>
 
-  <div class="container Bulb">
+  <div class="container block text-center">
         <h2>1st js Bulb on-off</h2>
         
         <button onclick="document.getElementById('myImage').src='../images/pic_bulbon.gif'">Turn on the light</button>
@@ -42,7 +42,7 @@
   </div> 
 
 
-  <div class="container Display">  
+  <div class="container block text-center">  
          <h2>2nd js display</h2>
 
         <p id="demo">JavaScript can change the style of an HTML element.</p>
@@ -52,16 +52,24 @@
         <button type="button" onclick="document.getElementById('demo').style.display='block'">Click Me!</button>
   </div>
 
-  <div class="container Display">
+  <div class="container block text-center">
     <h2>3rd JavaScript Statements</h2>
 
         <p id="demotest"></p>
   </div>
 
+  <div class="container block text-center">
+    <h2>4th JavaScript Variables</h2>
+
+    <p id="demoVariable"></p>
+
+  </div>
+
+
+
   <div class="jumbotron text-center" style="margin-top: 50px; margin-bottom:0">
     <p>Footer</p>
   </div>
-
 
   <script src="../js/index.js"></script>
 
