Add 5th js variable 2 #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -74,15 +74,29 @@
   </div>
 
   <div class="container block text-center">
-    <h2>th JavaScript Variables</h2>
+    <h2>6th JavaScript </h2>
 
   </div>
 
   <div class="container block text-center">
-    <h2>th JavaScript Variables</h2>
+    <h2>7th JavaScript </h2>
 
   </div>
 
+  <div class="container block text-center">
+    <h2>8th JavaScript </h2>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>9th JavaScript </h2>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>10th JavaScript </h2>
+
+  </div>
 
 
   <div class="jumbotron text-center" style="margin-top: 50px; margin-bottom:0">
