Add 6 & 7th js operator #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -76,10 +76,18 @@
   <div class="container block text-center">
     <h2>6th JavaScript </h2>
 
+      <p>The + operator concatenates (adds) strings.</p>
+
+      <p id="operator"></p>
+
   </div>
 
   <div class="container block text-center">
     <h2>7th JavaScript </h2>
+
+      <p>The assignment operator += can concatenate strings.</p>
+
+      <p id="operator1"></p>
 
   </div>
 
