Add 9th js object #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -94,6 +94,11 @@
   <div class="container block text-center">
     <h2>8th JavaScript </h2>
 
+       <p>The object.</p>
+
+       <p id="object"></p>
+
+      
   </div>
 
   <div class="container block text-center">
