Add 9th js functions previous 8th #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -104,6 +104,11 @@
   <div class="container block text-center">
     <h2>9th JavaScript </h2>
 
+      <p>This example calls a function which performs a calculation and returns the result:</p>
+
+      <p id="functionTest"></p>
+      <p id="functionTest1"></p>    
+      
   </div>
 
   <div class="container block text-center">
