Add 11th js slice method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -74,7 +74,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>6th JavaScript </h2>
+    <h2>6th JavaScript Operator </h2>
 
       <p>The + operator concatenates (adds) strings.</p>
 
@@ -83,7 +83,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>7th JavaScript </h2>
+    <h2>7th JavaScript Operator 1</h2>
 
       <p>The assignment operator += can concatenate strings.</p>
 
@@ -92,7 +92,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>8th JavaScript </h2>
+    <h2>8th JavaScript Object</h2>
 
        <p>The object.</p>
 
@@ -102,7 +102,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>9th JavaScript </h2>
+    <h2>9th JavaScript Functions test</h2>
 
       <p>This example calls a function which performs a calculation and returns the result:</p>
 
@@ -112,7 +112,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>10th JavaScript </h2>
+    <h2>10th JavaScript displayDate</h2>
 
     <button onclick="displayDate()">The time is?</button>
     
@@ -120,8 +120,12 @@
   </div>
 
   <div class="container block text-center">
-    <h2>11th JavaScript </h2>
+    <h2>11th JavaScript String Method</h2>
 
+    <p>The slice() method extract a part of a string
+      and returns the extracted parts in a new string:</p>
+
+    <p id="slicemethod"></p>
   </div>
 
   <div class="container block text-center">
