Add 12th js upper & lower case function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -130,7 +130,12 @@
 
   <div class="container block text-center">
     <h2>12th JavaScript </h2>
+      <p>Convert string to upper case:</p>
 
+      <p id="changecase">Hello World!</p>
+
+      <button onclick="UpperCase()">Try it</button>
+      <button onclick="LowerCase()">Try it</button>
   </div>
 
   <div class="container block text-center">
