--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -129,7 +129,8 @@
   </div>
 
   <div class="container block text-center">
-    <h2>12th JavaScript </h2>
+    <h2>12th JavaScript Upper & Lower case</h2>
+
       <p>Convert string to upper case:</p>
 
       <p id="changecase">Hello World!</p>
@@ -139,8 +140,12 @@
   </div>
 
   <div class="container block text-center">
-    <h2>13th JavaScript </h2>
+    <h2>13th JavaScript Concat method</h2>
 
+    <p>The concat() method joins two or more strings:</p>
+
+    <p id="concatmethod"></p>
+    
   </div>
 
   <div class="container block text-center">
