Add 14th js split in a array function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -142,15 +142,20 @@
   <div class="container block text-center">
     <h2>13th JavaScript Concat method</h2>
 
-    <p>The concat() method joins two or more strings:</p>
+      <p>The concat() method joins two or more strings:</p>
 
-    <p id="concatmethod"></p>
-    
+      <p id="concatmethod"></p>
+
   </div>
 
   <div class="container block text-center">
-    <h2>14th JavaScript </h2>
+    <h2>14th JavaScript string in a array </h2>
 
+      <p>Click "Try it" to display the first array element, after a string split.</p>
+
+      <button onclick="splitbutton()">Try it</button>
+
+      <p id="split"></p>
   </div>
 
   <div class="container block text-center">
