Add 15th & 16th js numbers & array function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -156,10 +156,42 @@
       <button onclick="splitbutton()">Try it</button>
 
       <p id="split"></p>
+
   </div>
 
   <div class="container block text-center">
-    <h2>15th JavaScript </h2>
+    <h2>15th JavaScript Numbers</h2>
+
+      <p>The toString() method can output numbers from base 2 to 36:</p>
+
+      <p id="numbers"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>16th JavaScript Array</h2>
+
+      <p id="array"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>17th JavaScript </h2>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>18th JavaScript </h2>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>19th JavaScript </h2>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>20th JavaScript </h2>
 
   </div>
 
