--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -176,7 +176,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>17th JavaScript </h2>
+    <h2>17th JavaScript Access the elements of an Array</h2>
+
+    <p>JavaScript array elements are accessed using numeric indexes (starting from 0).</p>
+    
+    <p id="arrayelements"></p>
 
   </div>
 
