Add 18th js array change elements function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -185,7 +185,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>18th JavaScript </h2>
+    <h2>18th JavaScript change an Array element </h2>
+  
+    <p>JavaScript array elements are accessed using numeric indexes (starting from 0).</p>
+
+    <p id="changearray"></p>
 
   </div>
 
