Add 19th js array object function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -194,7 +194,10 @@
   </div>
 
   <div class="container block text-center">
-    <h2>19th JavaScript </h2>
+    <h2>19th JavaScript Array Object</h2>
+
+      <p>JavaScript uses names to access object properties.</p>
+      <p id="arrayobject"></p>
 
   </div>
 
