Add 20th & 21th js array looping for & forEach function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -196,13 +196,29 @@
   <div class="container block text-center">
     <h2>19th JavaScript Array Object</h2>
 
-      <p>JavaScript uses names to access object properties.</p>
-      <p id="arrayobject"></p>
+        <p>JavaScript uses names to access object properties.</p>
+
+        <p id="arrayobject"></p>
 
   </div>
 
   <div class="container block text-center">
-    <h2>20th JavaScript </h2>
+    <h2>20th JavaScript Looping Array</h2>
+
+        <p>The best way to loop through an array is using a standard for loop:</p>
+
+        <p id="arraylooping"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>21th JavaScript Looping foreach Array</h2>
+
+        <p>Array.forEach() calls a function for each array element.</p>
+
+        <p>Array.forEach() is not supported in Internet Explorer 8 or earlier.</p>
+        
+        <p id="arrayforeach"></p>
 
   </div>
 
