Add 23th js 3  arrays concat function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -223,7 +223,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>22th JavaScript Concat()</h2>
+    <h2>22th JavaScript Concat() 2 arrays</h2>
 
       <p>The concat() method is used to merge (concatenate) arrays:</p>
 
@@ -232,10 +232,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>23th JavaScript</h2>
+    <h2>23th JavaScript Concat() 3 arrays</h2>
 
-        
-        <p id=""></p>
+    <p>The concat() method is used to merge (concatenate) arrays:</p>
+
+    <p id="concat3arrays"></p>
 
   </div>
 
