Add 24th js arrays sort  function method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -243,8 +243,11 @@
   <div class="container block text-center">
     <h2>24th JavaScript</h2>
 
-        
-        <p id=""></p>
+        <p>The sort() method sorts an array alphabetically.</p>
+
+        <button onclick="sortArrayFunction()">Try it</button>
+
+        <p id="sortarray"></p>
 
   </div>
 
