--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -252,7 +252,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>25th JavaScript Reversing array</h2>
+    <h2>25th JavaScript Sort Reversing array</h2>
 
     <p>The reverse() method reverses the elements in an array.</p>
     <p>By combining sort() and reverse() you can sort an array in descending order.</p>
@@ -265,8 +265,11 @@
   <div class="container block text-center">
     <h2>26th JavaScript</h2>
 
-        
-        <p id=""></p>
+      <p>Click the button to sort the array in ascending order.</p>
+
+      <button onclick="ascendingOrderFunction()">Try it</button>
+      
+      <p id="ascendingonder"></p>
 
   </div>
 
