Add 27th js descending order array function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -276,8 +276,11 @@
   <div class="container block text-center">
     <h2>27th JavaScript</h2>
 
-        
-        <p id=""></p>
+      <p>Click the button to sort the array in descending order.</p>
+
+      <button onclick="descendingorderFunction()">Try it</button>
+      
+      <p id="descendingorder"></p>
 
   </div>
 
