Add 29th foreach array & 30th array map js function error 28th  #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -306,10 +306,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>30th JavaScript</h2>
+    <h2>30th JavaScript Array map</h2>
 
-        
-        <p id=""></p>
+        <p>Creates a new array by performing a function on each array element.</p>
+
+        <p id="arraymap"></p>
 
   </div>
 
