Add part 31th to 50th #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -314,6 +314,186 @@
 
   </div>
 
+  <div class="container block text-center">
+    <h2>31th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>32th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>33th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>34th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>35th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>36th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>37th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>38th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>39th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>40th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>41th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>42th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>43th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>44th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>45th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>46th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>47th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>48th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>49th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
+  <div class="container block text-center">
+    <h2>50th JavaScript </h2>
+
+
+
+        <p id="arraymap"></p>
+
+  </div>
+
   <div class="jumbotron text-center" style="margin-top: 50px; margin-bottom:0">
     <p>Footer</p>
   </div>
