Add 31th getMonth() function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -315,20 +315,19 @@
   </div>
 
   <div class="container block text-center">
-    <h2>31th JavaScript </h2>
+    <h2>31th JavaScript getMonth() </h2>
 
+        <p>The getMonth() method returns the month as a number:</p>
 
+        <p>You can use an array to display the name of the month:</p>
 
-        <p id="arraymap"></p>
+        <p id="getmonth"></p>
 
   </div>
 
   <div class="container block text-center">
     <h2>32th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
 
   </div>
 
@@ -337,8 +336,6 @@
 
 
 
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
@@ -346,16 +343,12 @@
 
 
 
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>35th JavaScript </h2>
 
 
-
-        <p id="arraymap"></p>
 
   </div>
 
