--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -326,8 +326,12 @@
   </div>
 
   <div class="container block text-center">
-    <h2>32th JavaScript </h2>
+    <h2>32th JavaScript Math.Ramdom()</h2>
 
+      <p>Math.floor(Math.random() * 10) returns a random integer between 0 and 9 (both 
+        included):</p>
+        
+        <p id="mathramdom"></p>
 
   </div>
 
