Add 33th Comparaison function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -336,8 +336,15 @@
   </div>
 
   <div class="container block text-center">
-    <h2>33th JavaScript </h2>
+    <h2>33th JavaScript Comparaison</h2>
 
+        <p>Input your age and click the button:</p>
+
+        <input id="age" value="18" />
+        
+        <button onclick="comparaisonFunction()">Try it</button>
+        
+        <p id="comparaison"></p>
 
 
   </div>
