Add 34th & 35th conditions function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -352,14 +352,21 @@
   <div class="container block text-center">
     <h2>34th JavaScript </h2>
 
+        <p>Click the button to get a time-based greeting:</p>
 
+        <button onclick="conditionFunction()">Try it</button>
+        
+        <p id="condition"></p>
 
   </div>
 
   <div class="container block text-center">
-    <h2>35th JavaScript </h2>
+    <h2>35th JavaScript  </h2>
 
+    <p>Display "Good day!" if the hour is less than 18:00:</p>
 
+    <p id="condition1">Good Evening!</p>
+    
 
   </div>
 
