Add 36th switch function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -363,19 +363,16 @@
   <div class="container block text-center">
     <h2>35th JavaScript  </h2>
 
-    <p>Display "Good day!" if the hour is less than 18:00:</p>
+        <p>Display "Good day!" if the hour is less than 18:00:</p>
 
-    <p id="condition1">Good Evening!</p>
+        <p id="condition1">Good Evening!</p>
     
-
   </div>
 
   <div class="container block text-center">
     <h2>36th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
+        <p id="switch"></p>
 
   </div>
 
@@ -384,16 +381,11 @@
 
 
 
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>38th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
 
   </div>
 
@@ -402,16 +394,11 @@
 
 
 
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>40th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
 
   </div>
 
