Add 37th for loop function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -370,16 +370,16 @@
   </div>
 
   <div class="container block text-center">
-    <h2>36th JavaScript </h2>
+    <h2>36th JavaScript Switch </h2>
 
         <p id="switch"></p>
 
   </div>
 
   <div class="container block text-center">
-    <h2>37th JavaScript </h2>
+    <h2>37th JavaScript For loop</h2>
 
-
+        <p id="forloop"></p>
 
   </div>
 
