Add 38th While loop function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -384,8 +384,9 @@
   </div>
 
   <div class="container block text-center">
-    <h2>38th JavaScript </h2>
+    <h2>38th JavaScript While loop</h2>
 
+        <p id="whileloop"></p>
 
   </div>
 
