Add 39th DO/While loop & 40th error function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -391,15 +391,18 @@
   </div>
 
   <div class="container block text-center">
-    <h2>39th JavaScript </h2>
+    <h2>39th JavaScript DO/While loop</h2>
 
-
+        <p id="dowhileloop"></p>
 
   </div>
 
   <div class="container block text-center">
-    <h2>40th JavaScript </h2>
+    <h2>40th JavaScript Error try & catch </h2>
 
+        <p>This example demonstrates how to use <b>catch</b> to diplay an error.</p>
+
+        <p id="error"></p>
 
   </div>
 
