Add 41th Input validation exemple error function #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -407,11 +407,13 @@
   </div>
 
   <div class="container block text-center">
-    <h2>41th JavaScript </h2>
+    <h2>41th JavaScript Input validation exemple</h2>
 
+    <p>Please input a number between 5 and 10:</p>
 
-
-        <p id="arraymap"></p>
+    <input id="demoerror" type="text">
+    <button type="button" onclick="myErrorFunction()">Test Input</button>
+    <p id="p01"></p>
 
   </div>
 
