--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -409,21 +409,21 @@
   <div class="container block text-center">
     <h2>41th JavaScript Input validation exemple</h2>
 
-    <p>Please input a number between 5 and 10:</p>
+        <p>Please input a number between 5 and 10:</p>
 
-    <input id="demoerror" type="text">
-    <button type="button" onclick="myErrorFunction()">Test Input</button>
-    <p id="p01"></p>
+        <input id="demoerror" type="text">
+        <button type="button" onclick="myErrorFunction()">Test Input</button>
+        <p id="p01"></p>
 
   </div>
 
   <div class="container block text-center">
     <h2>42th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
-
+        <p>In this example, <b>this</b> represents the <b>person</b> object.</p>
+        <p>Because the person object "owns" the fullName method.</p>
+        
+        <p id="this"></p>
   </div>
 
   <div class="container block text-center">
