Add 43th Class method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -418,7 +418,7 @@
   </div>
 
   <div class="container block text-center">
-    <h2>42th JavaScript </h2>
+    <h2>42th JavaScript This</h2>
 
         <p>In this example, <b>this</b> represents the <b>person</b> object.</p>
         <p>Because the person object "owns" the fullName method.</p>
@@ -427,11 +427,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>43th JavaScript </h2>
+    <h2>43th JavaScript Class method </h2>
 
+        <p>Demonstration of how to add a method in a JavaScript Class.</p>
 
-
-        <p id="arraymap"></p>
+        <p id="classmethod"></p>
 
   </div>
 
@@ -439,17 +439,10 @@
     <h2>44th JavaScript </h2>
 
 
-
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>45th JavaScript </h2>
-
-
-
-        <p id="arraymap"></p>
 
   </div>
 
@@ -457,17 +450,11 @@
     <h2>46th JavaScript </h2>
 
 
-
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>47th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
 
   </div>
 
@@ -475,26 +462,17 @@
     <h2>48th JavaScript </h2>
 
 
-
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>49th JavaScript </h2>
 
 
-
-        <p id="arraymap"></p>
-
   </div>
 
   <div class="container block text-center">
     <h2>50th JavaScript </h2>
 
-
-
-        <p id="arraymap"></p>
 
   </div>
 
