Add 44th Class present method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -436,8 +436,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>44th JavaScript </h2>
+    <h2>44th JavaScript Class present() method</h2>
 
+        <p>Pass a parameter into the "present()" method.</p>
+
+        <p id="presentmethod"></p>
 
   </div>
 
