Add 45th Class static method #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -445,7 +445,11 @@
   </div>
 
   <div class="container block text-center">
-    <h2>45th JavaScript </h2>
+    <h2>45th JavaScript Class static method</h2>
+
+         <p>A static method is created with the "static" keyword, and you can only call the method on the class itself.</p>
+
+         <p id="staticmethod"></p>
 
   </div>
 
