--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -474,8 +474,20 @@
   </div>
 
   <div class="container block text-center">
-    <h2>47th JavaScript </h2>
+    <h2>47th JavaScript Global JavaScript Variables</h2>
 
+      <p>A GLOBAL variable can be accessed from any script or function.</p>
+
+      <p id="demo"></p>
+      
+      <script>
+      var carName = "Volvo";
+      myFunction();
+      
+      function myFunction() {
+        document.getElementById("demo").innerHTML = "I can display " + carName;
+      }
+      </script>
 
   </div>
 
