--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -492,8 +492,20 @@
   </div>
 
   <div class="container block text-center">
-    <h2>48th JavaScript </h2>
+    <h2>48th JavaScript Automatically Global</h2>
 
+      <p>If you assign a value to a variable that has not been declared, it will automatically become a GLOBAL variable:</p>
+
+      <p id="demo"></p>
+
+      <script>
+      myFunction();
+      // code here can use carName as a global variable
+      document.getElementById("demo").innerHTML = "I can display " + carName;
+      function myFunction() {
+        carName = "Volvo";
+      }
+      </script>
 
   </div>
 
