--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -25,8 +25,38 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="../index.html">Accueil</a>
-          </li> 
+          <a class="nav-link" href="../index.html">Accueil</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 1 à 10</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 11 à 20</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 21 à 30</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 31 à 40</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 41 à 50</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 51 à 60</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 61 à 70</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 71 à 80</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 81 à 90</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Javascript 91 à 100</a>
+        </li> 
       </ul>
     </div>  
   </nav>
@@ -38,7 +68,7 @@
         
       <img id="myImage" src="../images/pic_bulboff.gif" style="width:100px">
         
-    <button onclick="buttonOff()">Turn on the light</button>
+    <button onclick="buttonOff()">Turn off the light</button>
   </div> 
 
 
