Add menu page #5

--- a/projet_jeux/pages/pageJS.html
+++ b/projet_jeux/pages/pageJS.html
@@ -28,34 +28,34 @@
           <a class="nav-link" href="../index.html">Accueil</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 1 à 10</a>
+          <a class="nav-link" href="../pages/pageJS/js1.html">Javascript 1 à 10</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 11 à 20</a>
+          <a class="nav-link" href="../pages/pageJS/js2.html">Javascript 11 à 20</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 21 à 30</a>
+          <a class="nav-link" href="../pages/pageJS/js3.html">Javascript 21 à 30</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 31 à 40</a>
+          <a class="nav-link" href="../pages/pageJS/js4.html">Javascript 31 à 40</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 41 à 50</a>
+          <a class="nav-link" href="../pages/pageJS/js5.html">Javascript 41 à 50</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 51 à 60</a>
+          <a class="nav-link" href="../pages/pageJS/js6.html">Javascript 51 à 60</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 61 à 70</a>
+          <a class="nav-link" href="../pages/pageJS/js7.html">Javascript 61 à 70</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 71 à 80</a>
+          <a class="nav-link" href="../pages/pageJS/js8.html">Javascript 71 à 80</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 81 à 90</a>
+          <a class="nav-link" href="../pages/pageJS/js9.html">Javascript 81 à 90</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Javascript 91 à 100</a>
+          <a class="nav-link" href="../pages/pageJS/js10.html">Javascript 41 à 100</a>
         </li> 
       </ul>
     </div>  
