--- a/projet_jeux/pages/pageJS/js9.html
+++ b/projet_jeux/pages/pageJS/js9.html
@@ -18,14 +18,14 @@
   </div>
   
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a class="navbar-brand" href="../index.html">Logo</a>
+    <a class="navbar-brand" href="../../index.html">Logo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="../pageJS.html">Accueil</a>
+          <a class="nav-link" href="../pageJS.html">Accueil JS</a>
         </li> 
         <li class="nav-item">
           <a class="nav-link" href="#">Javascript 81 à 90</a>
