Add functions pages link to other pages #6

--- a/projet_jeux/pages/page3.html
+++ b/projet_jeux/pages/page3.html
@@ -62,6 +62,9 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pages/pageFonction.html">Page fonctions</a>
+          </li>   
         </ul>
         <hr class="d-sm-none">
       </div>
