--- a/projet_jeux/pages/page1.html
+++ b/projet_jeux/pages/page1.html
@@ -35,6 +35,9 @@
         </li>    
         <li class="nav-item">
           <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
+        </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="pages/pageFonction.html">Page fonctions</a>
         </li>    
       </ul>
     </div>  
