--- a/projet_jeux/pages/page2.html
+++ b/projet_jeux/pages/page2.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
         </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="pages/pageFonction.html">Page fonctions</a>
+        </li>   
       </ul>
     </div>  
   </nav>
