Add functions pages functions to other page and fix it and functions js page #6

--- a/projet_jeux/pages/page3.html
+++ b/projet_jeux/pages/page3.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
         </li>     
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/pageFonction.html">Page fonctions</a>
+        </li>   
       </ul>
     </div>  
   </nav>
@@ -62,9 +65,6 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/pageFonction.html">Page fonctions</a>
-          </li>   
         </ul>
         <hr class="d-sm-none">
       </div>
