--- a/projet_jeux/pages/page1.html
+++ b/projet_jeux/pages/page1.html
@@ -37,7 +37,7 @@
           <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
         </li>   
         <li class="nav-item">
-          <a class="nav-link" href="pages/pageFonction.html">Page fonctions</a>
+          <a class="nav-link" href="../pages/pageFonction.html">Page fonctions</a>
         </li>    
       </ul>
     </div>  
