--- a/projet_jeux/pages/pageFonction.html
+++ b/projet_jeux/pages/pageFonction.html
@@ -25,17 +25,20 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Page 1</a>
+            <a class="nav-link" href="../pages/page1.html">Page 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/page2.html">Page 2</a>
+            <a class="nav-link" href="../pages/page2.html">Page 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/page3.html">Page 3</a>
+            <a class="nav-link" href="../pages/page3.html">Page 3</a>
         </li>    
         <li class="nav-item">
-          <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
+            <a class="nav-link" href="../pages/pageJS.html">Page Test js</a>
         </li>    
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Page fonctions</a>
+          </li>    
       </ul>
     </div>  
   </nav>
@@ -49,20 +52,6 @@
         <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
         <h3>Some Links</h3>
         <p>Lorem ipsum dolor sit ame.</p>
-        <ul class="nav nav-pills flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
         <hr class="d-sm-none">
       </div>
 
@@ -70,15 +59,13 @@
         <h2>TITLE HEADING</h2>
         <h5>Title description, Feb 27, 2020</h5>
         <div class="fakeimg">Fake Image</div>
-        <p>Some text..</p>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <p>Some text..</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         <br>
         <h2>TITLE HEADING</h2>
         <h5>Title description, Sep 2, 2017</h5>
         <div class="fakeimg">Fake Image</div>
-        <p>Some text..</p>
-        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      </div>
+        </div>
     </div>
   </div> 
 
@@ -87,6 +74,6 @@
   </div>
 
 
-  <script src="../js/index.js"></script>
+  <script src="../js/functios.js"></script>
 </body>
 </html>
