--- a/projet_jeux/pages/pageFonction.html
+++ b/projet_jeux/pages/pageFonction.html
@@ -45,28 +45,28 @@
 
   <div class="container" style="margin-top:30px">
     <div class="row">
-      <div class="col-sm-4">
-        <h2>About Me</h2>
-        <h5>Photo of me:</h5>
-        <div class="fakeimg">Fake Image</div>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-        <h3>Some Links</h3>
-        <p>Lorem ipsum dolor sit ame.</p>
-        <hr class="d-sm-none">
-      </div>
+        <div class="col-sm-3">
+            <h2>Perso 1</h2>
+            <div class="fakeimg">Fake Image</div>
+            <hr class="d-sm-none">
+        </div>
 
-      <div class="col-sm-8">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Feb 27, 2020</h5>
-        <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-        <br>
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Sep 2, 2017</h5>
-        <div class="fakeimg">Fake Image</div>
+        <div class="col-sm-6">
+            <h2>TITLE HEADING</h2>
+            <div class="fakeimg">Fake Image</div>
+            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <br>
+        </div>
+
+        <div class="col-sm-3">
+            <h2>Perso 2</h2>
+            <div class="fakeimg">Fake Image</div>
+            <hr class="d-sm-none">
         </div>
     </div>
+
+
   </div> 
 
   <div class="jumbotron text-center" style="margin-bottom:0">
