Add function 2 page1 #6

--- a/projet_jeux/pages/pageJS/js1.html
+++ b/projet_jeux/pages/pageJS/js1.html
@@ -44,6 +44,16 @@
       <button onclick="buttonOff1()">Turn off the light</button>
   </div> 
 
+  <div class="container block text-center">  
+    <h2>2nd js display</h2>
+
+      <p id="demo">JavaScript can change the style of an HTML element.</p>
+
+        <button type="button" onclick="displayNone()">Hide Me!</button>
+
+        <button type="button" onclick="displayBlock()">Show Me!</button>
+  </div>
+
   <script src="../../js/index.js"></script>
 
 </body>
